--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,25 +1,78 @@
 {% extends "layout.html" %}
 {% block content %}
 
-    <div id='form'>
+    <form method='POST' action="">
+    	
+    	{{form.hidden_tag()}}
+    	<fieldset class="form">
+    		
+    		<legend>Log In</legend>
 
 
-		{{ form.email.label() }}
 
-		<br>
-		{{ form.email() }}
-		<br><br>
+    		{{ form.email.label() }}
 
-		{{ form.password.label() }}
+    		<br>
 
-		<br>
-		{{ form.password() }}
-		<br><br>
+    		{% if form.email.errors %}
+
+    			{{ form.email() }}
+
+    			<div class='invalid'>
+    			{% for error in form.email.errors %}
+
+    				{{ error }}
+
+    			{% endfor %}
+    			</div>
+
+    		{% else %}
+
+    			{{ form.email() }}
+
+    		{% endif %}
+
+    		<br><br>
 
 
-		{{form.submit()}}
 
-	</div>
+
+
+    		{{ form.password.label() }}
+
+    		<br>
+
+    		{% if form.password.errors %}
+
+    			{{ form.password() }}
+
+    			<div class='invalid'>
+    			{% for error in form.password.errors %}
+
+    				{{ error }}
+
+    			{% endfor %}
+    			</div>
+
+    		{% else %}
+
+    			{{ form.password() }}
+
+    		{% endif %}
+
+    		
+    		<br><br>
+    		{{ form.submit() }}
+
+
+    	</fieldset>
+
+  	
+
+    </form>
+    <br>
+    Need an account? <a href="{{url_for('register')}}">Register Here!</a>
 
 
 {% endblock content %}
+
