--- a/src/templates/archived.html
+++ b/src/templates/archived.html
@@ -29,17 +29,45 @@
 		    <th>{{ lesson.last_pass_date }}</th>
 		    <th>{{ lesson.next_pass_date }}</th>
 		    <th>{{ lesson.pass_count }}</th>
-		    <th><a href="{{ url_for('lesson_activate',lesson_id=lesson.id) }}">Activate again</a></th>
+		    <!-- <th><a href="{{ url_for('lesson_activate',lesson_id=lesson.id) }}">Activate again</a></th> -->
+		    <th><button type="button" class="btn" data-toggle="modal" data-target="#activateModal">Activate again</button></th>
 		  </tr>
+
+		  <!-- Archive Modal -->
+				<div class="modal fade" id="activateModal" tabindex="-1" role="dialog" aria-labelledby="activateModalLabel" aria-hidden="true">
+				  <div class="modal-dialog modal-dialog-centered" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLongTitle">Activate Lesson</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+
+				      <div class="modal-body">
+				        Do you want to activate lesson with id {{ lesson.id }}?
+				      </div>
+
+				      <div class="modal-footer">
+
+				        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+				        <form action="{{ url_for('lesson_archive',lesson_id=lesson.id) }}" method="POST">
+				          <input class="btn btn-info" type="submit" value="Activate">
+				        </form>
+
+				      </div>
+				    </div>
+				  </div>
+				</div>
 
 		  {% endfor %}
 		</table>
 
     	<div>
 
-    		
-    		
-    		<a href="{{ url_for('application') }}">Go back</a>	
+    		<br>
+    		<a class="btn btn-light" href="{{ url_for('application') }}">Go Back</a>
 
 
 
